# G4ParticleTracking

./: CMakeLists.txt  README.txt  main.cc
data/: dataReadin  dataReadin.cc
include/: Globals.hh  MyActionInitialization.hh  MyDetectorConstruction.hh  MyEventAction.hh  MyPhysicsList.hh  MyPrimaryGeneratorAction.hh  MyRunAction.hh  MySensitiveDetector_Atmosphere.hh  MySensitiveDetector_Earth.hh  MySteppingAction.hh
macro/: init_vis.mac  run1e0proton.mac  run1e1proton.mac  run2e3proton.mac  run5e3proton.mac
python/: rootAnalysis_particleTracking.ipynb
src/: Globals.cc  MyActionInitialization.cc  MyDetectorConstruction.cc  MyEventAction.cc  MyPhysicsList.cc  MyPrimaryGeneratorAction.cc  MyRunAction.cc  MySenstiveDetector_Atmosphere.cc  MySenstiveDetector_Earth.cc  MySteppingAction.cc
subjobcondor/: condorsubmit.sh  protest.sh
